# f1tenth_gtc_tutorial

./: README.md  f1tenth_tutorial.ipynb
data/console/config/display/navigation/: navigation.rviz
data/console/launch/navigation/: navigation.launch
data/console/launch/teleop/: keyboard_teleop.launch
data/console/nodes/: joy_teleop.py
data/platform/config/mapping/: transforms.launch
data/platform/config/navigation/: amcl_params.yaml  transforms.launch
data/platform/launch/mapping/: mapping.launch
data/platform/launch/robot/: robot.launch
data/virtual/dependencies/racecar_control/: package.xml
data/virtual/dependencies/racecar_control/launch/: racecar_control.launch
data/virtual/dependencies/racecar_description/: CMakeLists.txt
data/virtual/dependencies/racecar_description/urdf/: racecar.gazebo
data/virtual/dependencies/racecar_gazebo/: CMakeLists.txt
data/virtual/dependencies/racecar_gazebo/launch/: racecar.launch
data/virtual/dependencies/racecar_gazebo/scripts/: gazebo_odometry.py  gazebo_odometry_alt.py
data/virtual/simulator/launch/: simple_run.launch  simulator_mapping.launch  simulator_navigation.launch
data/virtual/simulator/nodes/follow_the_gap/: corner.cpp  corner.h  gap.cpp  obstacle.h
data/virtual/simulator/nodes/simple_run/: control.py  dist_finder.py
install/: README.md  install.sh
install/tools/: install_full.sh  install_source_only.sh  install_source_with_dependencies.sh
src/f1tenth/console/: CMakeLists.txt  package.xml
src/f1tenth/console/launch/mapping/: mapping.launch
src/f1tenth/console/launch/teleop/: joy_teleop.launch
src/f1tenth/console/nodes/: keyboard_teleop.py
src/f1tenth/platform/: CMakeLists.txt  package.xml
src/f1tenth/platform/config/mapping/maps/: demo.yaml
src/f1tenth/platform/config/navigation/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
src/f1tenth/platform/config/robot/: vesc.yaml
src/f1tenth/platform/launch/navigation/: navigation.launch
src/f1tenth/platform/nodes/: twist_ackermann.py
src/f1tenth/virtual/dependencies/racecar_control/: CMakeLists.txt
src/f1tenth/virtual/dependencies/racecar_description/: package.xml
src/f1tenth/virtual/dependencies/racecar_gazebo/: package.xml
src/f1tenth/virtual/simulator/: CMakeLists.txt  package.xml
src/f1tenth/virtual/simulator/launch/: follow_the_gap.launch  simulator_teleop.launch
src/f1tenth/virtual/simulator/msg/: CarControlData.msg  DriveValues.msg
src/f1tenth/virtual/simulator/nodes/follow_the_gap/: follow_the_gap.cpp  follow_the_gap_ride.py  gap.h  obstacle.cpp
src/f1tenth/virtual/simulator/nodes/simple_run/: pid_error.py
(+5 files in other folders)
